
- Re-organisation of some outputs in discrimination functions.

- Argument 'ncomp' added to functions scordis and odis.

- Argument 'alpha.f' (color opacity for points) added to function plotxy.

- Argument 'weights' added to function daglm.

- In pca.eigen, ...: output 'eig' contains the full set of eigenvalues (not only the first 'ncomp') 

- change alpha in pca robust

- segmcvkfold renamed in segmcv.kfold

- segmcvmc renamed in segmcv.test

- New functions

  plotjit
  


##----------------- Version 1.8-7

- New functions

  svmr          : SVM regression.
  
  svmc          : SVM discrimination (classification).
  
  splitpar      : Auxiliary function for tuning models.



##----------------- Version 1.8-6

- Various code cleaning


##----------------- Version 1.8-5

- Bug correction in kpls (Xu = NULL did not work)

- Various code cleaning


##----------------- Version 1.8-4

- New argument "cri" in function lwplsr, lwplsda and lwplsdalm

- Various code cleaning


##----------------- Version 1.8-3

- New argument "namx" in function plotmse

- Modification of kernel regression & DA functions: Values set to the kernel parameters (e.g. sigma) can be vectors.

- New functions:

  dkplsr       Direct kernel PLSR
  dkplsda      Direct kernel PLSDA
  dkplsdalm    Direct kernel PLSDA

##----------------- Version 1.8-2

- Various code cleaning

- Ghange of the default value of argument "h" in function lwplsr, lwplsda, lwplsdalm 


##----------------- Version 1.8-1

- New functions

    darr    DA with linear ridge regression 
  
    dakrr   DA with non linear kerbel ridge regression 

- Function lmridge renamed to rr

- Change argument value in function inlr

- New argument "square" in function wdist

- Various internal modifications


##----------------- Version 1.8-0

- Function matpoly renamed to "inls"

- Function out.pca renamed to "out.sdod"

- Modifiaction of function out.eucl

- Argument "weights" added to fonction pca.rob

- New functions
