@@ -1,4 +1,4 @@
-segmcvmc <- function(n, y = NULL, m, nrep = 1, seed = NULL) {
+segmts <- function(n, y = NULL, m, nrep = 1, seed = NULL) {
   
   segm <- vector("list", length = nrep)
   names(segm) <- paste("rep", 1:nrep, sep = "")
